--- a/pages/tab-bar-pages/home/index.wxss
+++ b/pages/tab-bar-pages/home/index.wxss
@@ -106,9 +106,12 @@
   min-height: 100%;
 }
 
+.banner-wrap {
+  position: relative;
+  margin: 8rpx 0 20rpx;
+  height: 200rpx;
+}
 .banner {
-  margin-top: 8rpx;
-  margin-bottom: 20rpx;
   height: 200rpx;
 }
 .banner-item {
@@ -117,6 +120,25 @@
 .banner-img {
   width: 100%;
   height: 100%;
+}
+.banner-dots {
+  position: absolute;
+  left: 50%;
+  bottom: 12rpx;
+  transform: translateX(-50%);
+  display: flex;
+  align-items: center;
+}
+.banner-dot {
+  margin: 0 4rpx;
+  width: 8rpx;
+  height: 8rpx;
+  background: #d6f4fd;
+  border-radius: 4rpx;
+}
+.banner-dot.active {
+  width: 24rpx;
+  background: #5bd6f8;
 }
 
 .classification-list {
