--- a/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/goods-order/order-detail/index.wxml
@@ -67,7 +67,7 @@
       </view>
       <view class="shop-name omit single" wx:if="{{!orderInfo.shopInfo}}">官方自营</view>
       <view class="countdown-wrap row" wx:if="{{orderInfo.status === 101}}">
-        <image class="alarm-icon" src="/images/alarm.png" />
+        <image class="alarm-icon" src="https://static.tiddler.cn/mp/order/alarm.png" />
         <view>剩余</view>
         <view class="countdown">{{TIME.countdown(countdown, 'hh:mm:ss')}}</view>
       </view>
