--- a/components/note-item/index.wxml
+++ b/components/note-item/index.wxml
@@ -28,7 +28,7 @@
       <text>私密</text>
     </view>
     <view class="address-info" wx:if="{{item.address}}">
-      <image class="address-icon" src="/images/address.png" />
+      <image class="address-icon" src="https://static.tiddler.cn/mp/address.png" />
       <view class="address-detail omit single">{{item.address}}</view>
       <view class="address-distance" wx:if="{{showDistance}}">，距您{{distance}}</view>
     </view>
