--- a/components/video-item/index.wxml
+++ b/components/video-item/index.wxml
@@ -31,7 +31,7 @@
       <image class="play-icon" src="https://static.tiddler.cn/mp/play.png" />
     </view>
     <view class="address-info" wx:if="{{item.address}}">
-      <image class="address-icon" src="/images/address.png" />
+      <image class="address-icon" src="https://static.tiddler.cn/mp/address.png" />
       <view class="address-detail omit single">{{item.address}}</view>
       <view class="address-distance" wx:if="{{showDistance}}">，距您{{distance}}</view>
     </view>
