--- a/pages/subpages/home/trip-type/homestay/components/hotel-item/index.wxml
+++ b/pages/subpages/home/trip-type/homestay/components/hotel-item/index.wxml
@@ -23,7 +23,7 @@
     />
     <view class="type-label row">民宿</view>
     <view class="address-info">
-      <image class="address-icon" src="/images/address.png" />
+      <image class="address-icon" src="https://static.tiddler.cn/mp/address.png" />
       <text class="address-detail omit single">{{ item.address }}</text>
     </view>
   </view>
