--- a/pages/subpages/mine/order/components/scenic-order-item/index.wxml
+++ b/pages/subpages/mine/order/components/scenic-order-item/index.wxml
@@ -12,7 +12,7 @@
     <view class="row">
       <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
       <view class="countdown-wrap row" wx:if="{{item.status === 101}}">
-        <image class="alarm-icon" src="/images/alarm.png" />
+        <image class="alarm-icon" src="https://static.tiddler.cn/mp/order/alarm.png" />
         <view>剩余</view>
         <view class="countdown">{{TIME.countdown(countdown, 'hh:mm:ss')}}</view>
       </view>
