--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -33,8 +33,8 @@
       <image class="banner-img" mode="widthFix" src="{{ item.cover }}" />
     </swiper-item>
   </swiper>
-  <view class="banner-dots" wx:if="{{bannerList.length > 1}}">
-    <view class="banner-dot {{curDot === index ? 'active' : ''}}" wx:for="{{bannerList.length}}" wx:key="index" />
+  <view class="banner-dots" style="width: {{12 * bannerList.length}}px;" wx:if="{{bannerList.length > 1}}">
+    <view class="banner-dot" style="left: {{12 * curDot}}px" />
   </view>
 </view>
 
