--- a/pages/subpages/mall/invite-merchant/index.wxss
+++ b/pages/subpages/mall/invite-merchant/index.wxss
@@ -7,7 +7,7 @@
   transition: background-color .2s ease;
 }
 .header.show {
-  background-color: #fffef0;
+  background-color: #fff;
   transition: background-color .2s ease;
 }
 .nav-bar {
@@ -35,11 +35,10 @@
 }
 
 .merchant-list {
-  margin-top: -24rpx;
-  padding: 24rpx;
-  min-height: 100vh;
-  background: #fffef0;
-  border-radius: 24rpx 24rpx 0 0;
+  margin-top: -32rpx;
+  min-height: calc(100vh - 500rpx);
+  background: #f5f6f8;
+  border-radius: 32rpx 32rpx 0 0;
 }
 
 .no-more-tips {
