--- a/pages/subpages/mall/invite-merchant/index.wxss
+++ b/pages/subpages/mall/invite-merchant/index.wxss
@@ -4,29 +4,50 @@
   left: 0;
   width: 100%;
   z-index: 100;
-  transition: background-color .2s ease;
+  transition: .2s ease;
 }
 .header.show {
-  background-color: #fff;
-  transition: background-color .2s ease;
+  background: linear-gradient(180deg, #fa90bf 0%, #fff 100%);
+  transition: .2s ease;
 }
 .nav-bar {
   padding-left: 8px;
-  padding-right: 40px;
   height: 44px;
 }
-.nav-bar-title {
-  flex: 1;
-  color: #000;
-  font-size: 34rpx;
+
+.mine-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 6px;
+  width: 54px;
+  height: 32px;
+  color: #fff;
+  font-size: 28rpx;
   font-weight: bold;
-  text-align: center;
-  opacity: 0;
-  transition: opacity .2s ease;
+  border-radius: 16px;
+  background: rgba(0, 0, 0, 0.3);
+  border: 0.5px solid rgba(255,255,255,0.3);
 }
-.nav-bar-title.show {
-  opacity: 1;
-  transition: opacity .2s ease;
+
+.qa-btn, .share-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 6px;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: rgba(0, 0, 0, 0.3);
+  border: 0.5px solid rgba(255,255,255,0.3);
+}
+.qa-icon {
+  width: 18px;
+  height: 18px;
+}
+.share-icon {
+  width: 24px;
+  height: 24px;
 }
 
 .bg {
@@ -34,11 +55,108 @@
   width: 100%;
 }
 
-.merchant-list {
-  margin-top: -32rpx;
-  min-height: calc(100vh - 500rpx);
+.container {
+  margin-top: -48rpx;
+  min-height: calc(300vh - 500rpx);
   background: #f5f6f8;
   border-radius: 32rpx 32rpx 0 0;
+}
+
+.menu-list {
+  display: flex;
+  padding: 0 12rpx;
+}
+.menu-list.fixed {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  background: #fff;
+}
+.menu-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  height: 100rpx;
+  color: #666;
+  font-size: 30rpx;
+}
+.menu-item.active {
+  position: relative;
+  color: #333;
+  font-weight: bold;
+}
+.menu-content {
+  z-index: 10;
+}
+.active-line {
+  position: absolute;
+  left: 50%;
+  bottom: 28rpx;
+  transform: translateX(-50%);
+  width: 110rpx;
+  height: 21rpx;
+}
+
+.merchant-list {
+  padding: 0 24rpx;
+}
+.merchant-list.fixed {
+  margin-top: 100rpx;
+}
+.merchant-item {
+  margin-bottom: 24rpx;
+  padding: 24rpx;
+  background: #fff;
+  border-radius: 24rpx;
+}
+.merchant-name {
+  color: #333;
+  font-size: 32rpx;
+  font-weight: bold;
+}
+.merchant-position {
+  display: flex;
+  margin-top: 12rpx;
+  color: #999;
+  font-size: 24rpx;
+}
+.position-icon {
+  margin-top: 2rpx;
+  width: 30rpx;
+  height: 30rpx;
+}
+.reward-info-wrap {
+  margin-top: 68rpx;
+}
+.coin-icon {
+  margin-right: 8rpx;
+  width: 32rpx;
+  height: 32rpx;
+}
+.reward {
+  color: #fdc72f;
+  font-size: 28rpx;
+  font-weight: bolder;
+}
+.navigate-btn, .task-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 24rpx;
+  width: 120rpx;
+  height: 58rpx;
+  color: #333;
+  font-size: 24rpx;
+  border-radius: 29rpx;
+  border: 0.5px solid #ddd;
+}
+.task-btn.active {
+  width: 150rpx;
+  color: #fff;
+  font-weight: bold;
+  border: none;
+  background: linear-gradient(135deg, #ff5f3e 0%, #ff0057 100%);
 }
 
 .no-more-tips {
