--- a/pages/subpages/mall/invite-merchant/index.wxml
+++ b/pages/subpages/mall/invite-merchant/index.wxml
@@ -1,13 +1,13 @@
 <view class="header {{headerVisible ? 'show' : ''}}" style="padding-top: {{statusBarHeight}}px">
   <view class="nav-bar row">
     <back-icon />
-    <view class="qa-btn">
-      <image class="qa-icon" src="https://static.tiddler.cn/mp/invite_merchant/qa.png" />
+    <view class="guide-btn" bindtap="checkGuide">
+      <image class="guide-icon" src="https://static.tiddler.cn/mp/invite_merchant/qa.png" />
     </view>
     <button class="share-btn" open-type='share' hover-class="none">
       <image class="share-icon" src="https://static.tiddler.cn/mp/invite_merchant/share.png" />
     </button>
-    <view class="mine-btn">我的</view>
+    <view class="mine-btn" bindtap="checkMineTask">我的</view>
   </view>
 </view>
 
