--- a/pages/subpages/mall/invite-merchant/index.wxss
+++ b/pages/subpages/mall/invite-merchant/index.wxss
@@ -30,7 +30,7 @@
   border: 0.5px solid rgba(255,255,255,0.3);
 }
 
-.qa-btn, .share-btn {
+.guide-btn, .share-btn {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -41,7 +41,7 @@
   background: rgba(0, 0, 0, 0.3);
   border: 0.5px solid rgba(255,255,255,0.3);
 }
-.qa-icon {
+.guide-icon {
   width: 18px;
   height: 18px;
 }
