--- a/pages/subpages/mine/setting/index.wxml
+++ b/pages/subpages/mine/setting/index.wxml
@@ -23,6 +23,10 @@
 </view>
 
 <view class="list-wrap">
+  <view class="list row between" bindtap="inviteMerchant">
+    <view class="title">邀请商家入驻</view>
+    <image class="arrow" src="./images/arrow.png" />
+  </view>
   <view class="list row between">
     <view class="title">常见问题与反馈</view>
     <image class="arrow" src="./images/arrow.png" />
