--- a/pages/subpages/mine/invite-merchant/index.wxss
+++ b/pages/subpages/mine/invite-merchant/index.wxss
@@ -20,10 +20,10 @@
   align-items: center;
   justify-content: center;
   margin-left: 6px;
-  width: 54px;
+  width: 72px;
   height: 32px;
   color: #fff;
-  font-size: 28rpx;
+  font-size: 26rpx;
   font-weight: bold;
   border-radius: 16px;
   background: rgba(0, 0, 0, 0.3);
@@ -57,7 +57,7 @@
 
 .container {
   margin-top: -48rpx;
-  min-height: calc(300vh - 500rpx);
+  min-height: calc(100vh - 500rpx);
   background: #f5f6f8;
   border-radius: 32rpx 32rpx 0 0;
 }
@@ -98,65 +98,11 @@
   height: 21rpx;
 }
 
-.merchant-list {
+.task-list {
   padding: 0 24rpx;
 }
-.merchant-list.fixed {
+.task-list.fixed {
   margin-top: 100rpx;
-}
-.merchant-item {
-  margin-bottom: 24rpx;
-  padding: 24rpx;
-  background: #fff;
-  border-radius: 24rpx;
-}
-.merchant-name {
-  color: #333;
-  font-size: 32rpx;
-  font-weight: bold;
-}
-.merchant-position {
-  display: flex;
-  margin-top: 12rpx;
-  color: #999;
-  font-size: 24rpx;
-}
-.position-icon {
-  margin-top: 2rpx;
-  width: 30rpx;
-  height: 30rpx;
-}
-.reward-info-wrap {
-  margin-top: 68rpx;
-}
-.coin-icon {
-  margin-right: 8rpx;
-  width: 32rpx;
-  height: 32rpx;
-}
-.reward {
-  color: #fdc72f;
-  font-size: 28rpx;
-  font-weight: bolder;
-}
-.navigate-btn, .task-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 24rpx;
-  width: 120rpx;
-  height: 58rpx;
-  color: #333;
-  font-size: 24rpx;
-  border-radius: 29rpx;
-  border: 0.5px solid #ddd;
-}
-.task-btn.active {
-  width: 150rpx;
-  color: #fff;
-  font-weight: bold;
-  border: none;
-  background: linear-gradient(135deg, #ff5f3e 0%, #ff0057 100%);
 }
 
 .no-more-tips {
