--- a/pages/subpages/mine/invite-merchant/subpages/mine-task/index.wxss
+++ b/pages/subpages/mine/invite-merchant/subpages/mine-task/index.wxss
@@ -24,12 +24,11 @@
   width: 18rpx;
   height: 18rpx;
 }
-.data-info-wrap {
-  align-items: flex-end;
+.data-info {
   margin-top: 60rpx;
 }
 .data-item {
-  margin-right: 80rpx;
+  flex: 1;
 }
 .data-name {
   color: #3C3F42;
@@ -40,18 +39,6 @@
   color: #14191F;
   font-size: 50rpx;
   font-weight: bolder;
-}
-.withdraw-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 120rpx;
-  height: 50rpx;
-  color: #fff;
-  font-size: 24rpx;
-  font-weight: bold;
-  border-radius: 25rpx;
-  background: linear-gradient(135deg, #ff5f3e 0%, #ff0057 100%);
 }
 
 .menu-item {
@@ -80,54 +67,9 @@
   background: #ff0057;
 }
 
-.task-item {
-  margin-bottom: 24rpx;
-  padding: 24rpx;
-  background: #fff;
-  border-radius: 24rpx;
-}
-.task-name {
-  color: #333;
-  font-size: 32rpx;
-  font-weight: bold;
-}
-.task-status {
+.no-more-tips {
+  margin-top: 36rpx;
   color: #999;
   font-size: 24rpx;
-}
-.task-position {
-  display: flex;
-  margin-top: 12rpx;
-  color: #999;
-  font-size: 24rpx;
-}
-.position-icon {
-  margin-top: 2rpx;
-  width: 30rpx;
-  height: 30rpx;
-}
-.reward-info-wrap {
-  margin-top: 68rpx;
-}
-.coin-icon {
-  margin-right: 8rpx;
-  width: 32rpx;
-  height: 32rpx;
-}
-.reward {
-  color: #fdc72f;
-  font-size: 28rpx;
-  font-weight: bolder;
-}
-.detail-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-left: 24rpx;
-  width: 150rpx;
-  height: 58rpx;
-  color: #333;
-  font-size: 24rpx;
-  border-radius: 29rpx;
-  border: 0.5px solid #ddd;
+  text-align: center;
 }
