--- a/components/restaurant-item/index.wxml
+++ b/components/restaurant-item/index.wxml
@@ -3,7 +3,7 @@
     <image 
       class="final-cover {{visible ? 'show' : ''}}" 
       style="height: {{item.coverHeight}}rpx;" 
-      src="{{item.cover}}?x-oss-process=image/resize,w_500" 
+      src="{{item.cover}}?x-oss-process=image/resize,w_500,webp" 
       bindload="onVisible" 
       mode="aspectFill" 
     />
@@ -11,13 +11,13 @@
       class="cover" 
       style="height: {{item.coverHeight}}rpx;" 
       wx:if="{{item.coverHeight}}" 
-      src="{{item.cover}}?x-oss-process=image/resize,w_10" 
+      src="{{item.cover}}?x-oss-process=image/resize,w_10,webp" 
       mode="aspectFill" 
     />
     <image 
       class="cover" 
       wx:if="{{!item.coverHeight}}" 
-      src="{{item.cover}}?x-oss-process=image/resize,w_10" 
+      src="{{item.cover}}?x-oss-process=image/resize,w_10,webp" 
       bindload="onCoverLoaded" 
       mode="widthFix" 
     />
