--- a/components/video-item/index.wxml
+++ b/components/video-item/index.wxml
@@ -5,7 +5,7 @@
     <image 
       class="final-cover {{visible ? 'show' : ''}}" 
       style="height: {{item.coverHeight}}rpx;"
-      src="{{item.cover}}?x-oss-process=image/resize,w_500" 
+      src="{{item.cover}}?x-oss-process=image/resize,w_500,webp" 
       bindload="onVisible" 
       mode="aspectFill" 
     />
@@ -13,13 +13,13 @@
       class="cover" 
       style="height: {{item.coverHeight}}rpx;" 
       wx:if="{{item.coverHeight}}" 
-      src="{{item.cover}}?x-oss-process=image/resize,w_10" 
+      src="{{item.cover}}?x-oss-process=image/resize,w_10,webp" 
       mode="aspectFill" 
     />
     <image 
       class="cover" 
       wx:if="{{!item.coverHeight}}" 
-      src="{{item.cover}}?x-oss-process=image/resize,w_10" 
+      src="{{item.cover}}?x-oss-process=image/resize,w_10,webp" 
       bindload="onCoverLoaded" 
       mode="widthFix" 
     />
