--- a/pages/subpages/common/ai-chat/index.wxss
+++ b/pages/subpages/common/ai-chat/index.wxss
@@ -7,7 +7,7 @@
   width: 100vw;
   height: 100vh;
   background-color: #fff;
-  background-image: url('https://static.tiddler.cn/mp/ai/bg.png');
+  background-image: url('https://static.tiddler.cn/mp/ai/bg.webp');
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
