--- a/pages/tab-bar-pages/home/components/ai-tag/index.wxss
+++ b/pages/tab-bar-pages/home/components/ai-tag/index.wxss
@@ -8,7 +8,7 @@
   width: 168rpx;
   height: 68rpx;
   border-radius: 24rpx;
-  background-image: url('https://static.tiddler.cn/mp/ai/tag_bg.png');
+  background-image: url('https://static.tiddler.cn/mp/ai/tag_bg.webp');
   background-size: 168rpx 68rpx;
   background-repeat: no-repeat;
   z-index: 80;
