--- a/pages/tab-bar-pages/home/components/top-media/index.wxml
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxml
@@ -8,7 +8,7 @@
       data-id="{{item.id}}" 
       data-type="{{item.type}}"
     >
-      <image class="top-media-cover" src="{{item.cover}}" mode="aspectFill" lazy-load />
+      <image class="top-media-cover" src="{{item.cover}}?x-oss-process=image/format,webp" mode="aspectFill" lazy-load />
       <view class="top-media-time row">
         <view class="time-date">{{item.date}}</view>
         <view class="time-split"></view>
@@ -38,7 +38,7 @@
       class="top-media-menu-item {{curMediaIdx === index ? 'active' : ''}}" 
       wx:for="{{mediaList}}" 
       wx:key="index" 
-      src="{{item.cover}}?x-oss-process=image/resize,w_120"
+      src="{{item.cover}}?x-oss-process=image/resize,w_120,webp"
       bindtap="selectTopMedia"
       data-index="{{index}}"
       mode="aspectFill"
