--- a/pages/tab-bar-pages/home/components/top-media/index.wxml
+++ b/pages/tab-bar-pages/home/components/top-media/index.wxml
@@ -38,7 +38,7 @@
       class="top-media-menu-item {{curMediaIdx === index ? 'active' : ''}}" 
       wx:for="{{mediaList}}" 
       wx:key="index" 
-      src="{{item.cover}}?x-oss-process=image/resize,w_120,webp"
+      src="{{item.cover}}?x-oss-process=image/resize,w_120/format,webp"
       bindtap="selectTopMedia"
       data-index="{{index}}"
       mode="aspectFill"
