--- a/pages/subpages/mall/scenic/subpages/shop/index.wxml
+++ b/pages/subpages/mall/scenic/subpages/shop/index.wxml
@@ -4,7 +4,7 @@
   <view class="back-icon-wrap row" style="top: {{statusBarHeight}}px;">
     <back-icon />
   </view>
-  <image class="cover" mode="widthFix" src="{{shopInfo.cover || 'https://static.tiddler.cn/mp/shop_bg.png'}}" />
+  <image class="cover" mode="widthFix" src="{{shopInfo.cover || 'https://static.tiddler.cn/mp/shop_bg.webp'}}" />
 </view>
 
 
