--- a/pages/tab-bar-pages/home/components/ad-modal/index.wxml
+++ b/pages/tab-bar-pages/home/components/ad-modal/index.wxml
@@ -1,6 +1,6 @@
 <view class="modal-mask" bindtap="hide">
   <view class="ad-poster" catchtap="catchtap">
-    <image class="ad-poster-img" src="{{info.cover}}" catchtap="linkTo" mode="widthFix" />
+    <image class="ad-poster-img" src="{{info.cover}}?x-oss-process=image/format,webp" catchtap="linkTo" mode="widthFix" />
     <image class="close-icon" catchtap="hide" src="https://img.ubo.vip/mp/index/close-icon.png" />
   </view>
 </view>
