--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -2,15 +2,15 @@
 <wxs module="ARRAY" src="/utils/filters/array.wxs" />
 
 <view class="nav-bar row" style="padding-top: {{statusBarHeight}}px;">
-  <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{userInfo.bg || 'https://static.tiddler.cn/mp/bg.png'}}" />
+  <image class="nav-bg" wx:if="{{navBarVisible}}" src="{{userInfo.bg ? (userInfo.bg + '?x-oss-process=image/format,webp') : 'https://static.tiddler.cn/mp/bg.webp'}}" />
   <view class="bg-cover" wx:if="{{navBarVisible}}" />
   <!-- <image class="sign-in-icon" wx:if="{{!navBarVisible}}" src="https://static.tiddler.cn/mp/sign_in.png" /> -->
   <view class="promoter-icon" wx:if="{{!userInfo.promoterInfo && superiorInfo}}">
-    <image class="promoter-avatar" src="{{superiorInfo.avatar}}" />
+    <image class="promoter-avatar" src="{{superiorInfo.avatar ? (superiorInfo.avatar + '?x-oss-process=image/format,webp') : 'https://static.tiddler.cn/mp/default_avatar.png'}}" />
     <image class="promoter-medal-small" src="https://static.tiddler.cn/mp/promoter/level_{{superiorInfo.promoterInfo.level}}/medal.gif" />
   </view>
   <view class="mine-avatar-wrap" wx:if="{{navBarVisible}}">
-    <image class="mine-avatar" src="{{userInfo.avatar}}" />
+    <image class="mine-avatar" src="{{userInfo.avatar ? (userInfo.avatar + '?x-oss-process=image/format,webp') : 'https://static.tiddler.cn/mp/default_avatar.png'}}" />
     <image 
       class="mine-medal" 
       wx:if="{{userInfo.promoterInfo}}" 
@@ -21,11 +21,11 @@
 </view>
 
 <view class="container">
-  <image class="bg" src="{{userInfo.bg || 'https://static.tiddler.cn/mp/bg.png'}}" bindtap="navToUserInfoSetting" mode="aspectFill" />
+  <image class="bg" src="{{userInfo.bg ? (userInfo.bg + '?x-oss-process=image/format,webp') : 'https://static.tiddler.cn/mp/bg.webp'}}" bindtap="navToUserInfoSetting" mode="aspectFill" />
   <view class="content">
     <view class="user-info-wrap">
       <view class="avatar-wrap">
-        <image class="avatar" bindtap="navToUserInfoSetting" src="{{userInfo.avatar  || 'https://static.tiddler.cn/mp/default_avatar.png'}}" />
+        <image class="avatar" bindtap="navToUserInfoSetting" src="{{userInfo.avatar ? (userInfo.avatar + '?x-oss-process=image/format,webp') : 'https://static.tiddler.cn/mp/default_avatar.png'}}" />
         <image 
           class="promoter-medal" 
           wx:if="{{userInfo.promoterInfo}}" 
