--- a/components/goods-item/index.wxss
+++ b/components/goods-item/index.wxss
@@ -71,7 +71,7 @@
   font-size: 22rpx;
   font-weight: bold;
   text-align: center;
-  background-image: url('https://static.tiddler.cn/mp/gift/bar_bg.png');
+  background-image: url('https://static.tiddler.cn/mp/gift/bar_bg.webp');
   background-size: 100% 100%;
   background-repeat: no-repeat;
 }
